--- a/amber.html
+++ b/amber.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Hello AMBER</h1>
+    <!-- repeat code -->
+    <h1>Hello AMBER</h1>
+    <!--end here  -->
    <hr>
     <p>Lorem ipsum dolor sit amet consectetur <em> adipisicing </em>elit. A necessitatibus voluptates <br> maiores <strong> distinctio architecto eligendi</strong> quis adipisci ab ullam et! Nisi suscipit velit quos  <br> voluptatem nesciunt aut eius adipisci soluta.</p>
     <h2>My table</h2>
